--- a/Home.css
+++ b/Home.css
@@ -127,6 +127,10 @@
   border: 4px solid #2cccc4;
   width: 100px;
   height: 50px;
+
+  cursor: move;
+  z-index: 10;
+  position: absolute;
 }
 
 .btn-play {
