--- a/Home.css
+++ b/Home.css
@@ -149,7 +149,7 @@
 .u-section-2 .u-image-1 {
   width: 507px;
   height: 507px;
-  background-image: url("images/strokes.jpeg");
+  background-image: url("images/arcticmonkeys.jpg");
   background-position: 50% 50%;
   --animation-custom_in-translate_x: -200px;
   --animation-custom_in-translate_y: 0px;
